--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Synchronous by TEMPLATED</title>
+		<title>F1</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -32,18 +33,18 @@
 					
 					<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Synchronous</a></h1>
-						<span>Design by TEMPLATED</span>
+						<h1><a href="#">Formula 1</a></h1>
+						<span>Tema</span>
 					</div>
 					
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">Three Column</a></li>
-							<li><a href="twocolumn1.html">Left Sidebar</a></li>
-							<li><a href="twocolumn2.html">Right Sidebar</a></li>
-							<li><a href="onecolumn.html">No Sidebar</a></li>
+							<li class="active"><a href="index.html">Historia</a></li>
+							<li><a href="threecolumn.html">Pilotos</a></li>
+							<li><a href="twocolumn1.html">Grandes Premios</a></li>
+							<li><a href="twocolumn2.html">Temporada actual</a></li>
+							<li><a href="onecolumn.html">Formulario</a></li>
 						</ul>
 					</nav>
 				</div>
