--- a/threecolumn.html
+++ b/threecolumn.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Synchronous by TEMPLATED</title>
+		<title>Pilotos</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -20,8 +21,13 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<script>
+		function mostrar(enla) {
+			obj = document.getElementById('oculto');
+			obj.style.display = (obj.style.display == 'block') ? 'none' : 'block';
+			enla.innerHTML = (enla.innerHTML == '-') ? '+' : '-';
+		}
+		</script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -32,18 +38,18 @@
 					
 					<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Synchronous</a></h1>
+						<h1><a href="#">Formula 1</a></h1>
 						<span>Design by TEMPLATED</span>
 					</div>
 					
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Homepage</a></li>
-							<li class="active"><a href="threecolumn.html">Three Column</a></li>
-							<li><a href="twocolumn1.html">Left Sidebar</a></li>
-							<li><a href="twocolumn2.html">Right Sidebar</a></li>
-							<li><a href="onecolumn.html">No Sidebar</a></li>
+							<li><a href="index.html">Historia</a></li>
+							<li class="active"><a href="threecolumn.html">Pilotos</a></li>
+							<li><a href="twocolumn1.html">Grandes Premios</a></li>
+							<li><a href="twocolumn2.html">Temporada actual</a></li>
+							<li><a href="onecolumn.html">Formulario</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -56,103 +62,219 @@
 						<div class="3u">
 							<section id="sidebar1">
 								<header>
-									<h2>Sidebar 1</h2>
+									<h2>Calendario 2018</h2>
 								</header>
 								<ul class="style3">
 									<li class="first">
-										<p class="date"><a href="#">Oct <b>03</b></a></p>
-										<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent urna congue rutrum. </a></p>
+										<p class="date"><a href="#">Mar <b>25</b></a></p>
+										<p><a href="#">GP de Australia Circuito: Albert Park</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">Sep <b>30</b></a></p>
-										<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent urna congue rutrum.</a></p>
+										<p class="date"><a href="#">Abr <b>08</b></a></p>
+										<p><a href="#">GP de Baréin Circuito: Internacional de Bareín</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">Sep <b>27</b></a> </p>
-										<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent urna congue rutrum.</a></p>
+										<p class="date"><a href="#">Abr <b>15</b></a> </p>
+										<p><a href="#">GP de China Circuito: Internacional de Shanghái</a></p>
 									</li>
+									<li>
+										<p class="date"><a href="#">Abr <b>29</b></a> </p>
+										<p><a href="#">GP de Azerbaiyán Circuito: Callejero de Bakú</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">May <b>13</b></a> </p>
+										<p><a href="#">GP de España Circuito: Barcelona-Cataluña</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">May <b>27</b></a> </p>
+										<p><a href="#">GP de Mónaco Circuito: Mónaco</a></p>
+									</li>
+									<a href="#" onclick="mostrar(this); return false" />Ver más</a>
+									<div id="oculto" style="display:none">
+									<li>
+										<p class="date"><a href="#">Jun <b>10</b></a> </p>
+										<p><a href="#">GP de Canadá Circuito: Gilles Villeneuve</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Jun <b>24</b></a> </p>
+										<p><a href="#">GP de Francia Circuito: Paul Ricard</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Jul <b>01</b></a> </p>
+										<p><a href="#">GP de Austria Circuito: Red Bull Ring</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Jul <b>08</b></a> </p>
+										<p><a href="#">GP de Gran Bretaña Circuito: Silverstone</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Jul <b>22</b></a> </p>
+										<p><a href="#">GP de Alemania Circuito: Hockenheimring</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Jul <b>29</b></a> </p>
+										<p><a href="#">GP de Hungría Circuito: Hungaroring</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Ago <b>26</b></a> </p>
+										<p><a href="#">GP de Bélgica Circuito: Spa-Francorchamps</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Sept <b>02</b></a> </p>
+										<p><a href="#">GP de Italia Circuito: Autodromo Nazionale di Monza</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Sept <b>16</b></a> </p>
+										<p><a href="#">GP de Singapur Circuito: Callejero de Marina Bay</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Sept <b>30</b></a> </p>
+										<p><a href="#">GP de Rusia Circuito: Autódromo de Sochi</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Oct <b>07</b></a> </p>
+										<p><a href="#">GP de Japón Circuito: Suzuka</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Oct <b>21</b></a> </p>
+										<p><a href="#">GP de Estados Unidos Circuito: De las Américas</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Oct <b>28</b></a> </p>
+										<p><a href="#">GP de México Circuito: Autódromo Hermanos Rodríguez</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Nov <b>11</b></a> </p>
+										<p><a href="#">GP de Brasil Circuito: Autódromo José Carlos Pace</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">Nov <b>25</b></a> </p>
+										<p><a href="#">GP de Abu Dabi Circuito: Yas Marina</a></p>
+									</li>
+									</div>
 								</ul>
 							</section>
 						</div>
 						<div class="6u skel-cell-important">
 							<section id="content" >
 								<header>
-									<h2>Three Column</h2>
+									<h2>Pilotos 2018</h2>
 								</header>
-								<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. Donec leo. Vivamus fermentum nibh in augue. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit.</p>
-								<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. Donec leo. Vivamus fermentum nibh in augue. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia.<br>
-								</p>
+								<p><table>
+									<caption>Alineación oficial de participantes en F1 2018</caption>
+									<thead>
+										<tr>
+											<th>Piloto</th>
+											<th>Equipo</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Lewis Hamilton</td>
+											<td>Mercedes AMG Petronas Motorsport</td>
+										</tr>
+										<tr>
+											<td>Valtteri Bottas</td>
+											<td>Mercedes AMG Petronas Motorsport</td>
+										</tr>
+										<tr>
+											<td>Sebastian Vettel</td>
+											<td>Scuderia Ferrari</td>
+										</tr>
+										<tr>
+											<td>Kimi Räikkönen</td>
+											<td>Scuderia Ferrari</td>
+										</tr>
+										<tr>
+											<td>Daniel Ricciardo</td>
+											<td>Aston Martin Red Bull Racing</td>
+										</tr>
+										<tr>
+											<td>Max Verstappen</td>
+											<td>Aston Martin Red Bull Racing</td>
+										</tr>
+										<tr>
+											<td>Sergio Pérez</td>
+											<td>Sahara Force India F1 Team</td>
+										</tr>
+										<tr>
+											<td>Esteban Ocon</td>
+											<td>Sahara Force India F1 Team</td>
+										</tr>
+										<tr>
+											<td>Lance Stroll</td>
+											<td>Williams Martini Racing</td>
+										</tr>
+										<tr>
+											<td>Sergey Sirotkin</td>
+											<td>Williams Martini Racing</td>
+										</tr>
+										<tr>
+											<td>Nico Hülkenberg</td>
+											<td>Renault Sport Formula One Team</td>
+										</tr>
+										<tr>
+											<td>Carlos Sainz</td>
+											<td>Renault Sport Formula One Team</td>
+										</tr>
+										<tr>
+											<td>Pierre Gasly</td>
+											<td>Red Bull Toro Rosso Honda</td>
+										</tr>
+										<tr>
+											<td>Brendon Hartley</td>
+											<td>Red Bull Toro Rosso Honda</td>
+										</tr>
+										<tr>
+											<td>Romain Grosjean</td>
+											<td>Haas F1 Team</td>
+										</tr>
+										<tr>
+											<td>Kevin Magnussen</td>
+											<td>Haas F1 Team</td>
+										</tr>
+										<tr>
+											<td>Fernando Alonso</td>
+											<td>McLaren F1 Team</td>
+										</tr>
+										<tr>
+											<td>Stoffel Vandoorne</td>
+											<td>McLaren F1 Team</td>
+										</tr>
+										<tr>
+											<td>Marcus Ericsson</td>
+											<td>Alfa Romeo Sauber F1 Team</td>
+										</tr>
+										<tr>
+											<td>Charles Leclerc</td>
+											<td>Alfa Romeo Sauber F1 Team</td>
+										</tr>
+									</tbody>
+								</table></p>
 							</section>
 						</div>
 						<div class="3u">
 							<section id="sidebard2">
 								<header>
-									<h2>Sidebar 2</h2>
+									<h2>Equipos</h2>
 								</header>
 								<ul class="style1">
-									<li class="first"><span class="fa fa-check"></span><a href="#">Maecenas luctus lectus at sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam rhoncus volutpat erat</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Donec dictum metus in sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Integer gravida nibh quis urna</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam posuere augue sit amet nisl</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Mauris vulputate dolor nibh</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Nulla luctus eleifend purus</a></li>
+									<li class="first"><a href="#">Mercedes AMG Petronas Motorsport</a></li>
+									<li><a href="#">Scuderia Ferrari</a></li>
+									<li><a href="#">Aston Martin Red Bull Racing</a></li>
+									<li><a href="#">Sahara Force India F1 Team</a></li>
+									<li><a href="#">Williams Martini Racing</a></li>
+									<li><a href="#">Renault Sport Formula One Team</a></li>
+									<li><a href="#">Red Bull Toro Rosso Honda</a></li>
+									<li><a href="#">Haas F1 Team</a></li>
+									<li><a href="#">McLaren F1 Team</a></li>
+									<li><a href="#">Alfa Romeo Sauber F1 Team</a></li>
 								</ul>
-								<a href="#" class="button">Full Article</a>
 							</section>
 						</div>
 					</div>
 
 				</div>	
-			</div>
-
-
-			<!-- Footer -->
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="3u">
-							<section id="box1">
-								<header>
-									<h2>Nulla facilisi</h2>
-								</header>
-								<ul class="style3">
-									<li class="first">
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Vestibulum sem magna, elementum ut, vestibulum facilisis. Nulla facilisi. Cum sociis natoque penatibus.</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Pellentesque erat erat, tincidunt in, eleifend, malesuada bibendum. Suspendisse sit amet  in eros bibendum condimentum. </a> </p>
-									</li>
-								</ul>
-							</section>
-						</div>
-						<div class="6u">
-							<section id="box2">
-								<header>
-									<h2>Donec dictum metus</h2>
-								</header>
-								<div> <a href="#" class="image full"><img src="images/pics02.jpg" alt=""></a> </div>
-								<p>Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl.</p>
-							</section>
-						</div>
-						<div class="3u">
-							<section id="box3">
-								<header>
-									<h2>Gravida ipsum</h2>
-								</header>
-								<ul class="style1">
-									<li class="first"><a href="#">Pellentesque quis elit non lectus eleifend purus condimentum.</a></li>
-									<li><a href="#">Lorem ipsum dolort, consectetuer adipiscing dictum metus sapien.</a></li>
-									<li><a href="#">Phasellus nec dictum metus in sapien pellentesque congue.</a></li>
-									<li><a href="#">Cras vitae metus aliquam risus dictum metus in sapien pharetra.</a></li>
-									<li><a href="#">Duis non dictum metus in sapien ante in metus commodo euismod lobortis.</a></li>
-								</ul>
-							</section>
-						</div>
-					</div>
-				</div>
 			</div>
 
 			<!-- Copyright -->
