--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Synchronous by TEMPLATED</title>
+		<title>Temporada actual</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -32,18 +33,18 @@
 					
 					<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Synchronous</a></h1>
+						<h1><a href="#">Formula 1</a></h1>
 						<span>Design by TEMPLATED</span>
 					</div>
 					
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">Three Column</a></li>
-							<li><a href="twocolumn1.html">Left Sidebar</a></li>
-							<li class="active"><a href="twocolumn2.html">Right Sidebar</a></li>
-							<li><a href="onecolumn.html">No Sidebar</a></li>
+							<li><a href="index.html">Historia</a></li>
+							<li><a href="threecolumn.html">Pilotos</a></li>
+							<li><a href="twocolumn1.html">Grandes premios</a></li>
+							<li class="active"><a href="twocolumn2.html">Temporada actual</a></li>
+							<li><a href="onecolumn.html">formulario</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -56,81 +57,57 @@
 						<div class="9u skel-cell-important">
 							<section id="content" >
 								<header>
-									<h2>Right Sidebar</h2>
+									<h2>Temporada actual</h2>
+									<h3>Clasificacion Mundial 2018</h3>
 								</header>
-								<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. Donec leo. Vivamus fermentum nibh in augue. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor.</p>
-								<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. Donec leo. Vivamus fermentum nibh in augue. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor.<br>
+								<p>
+									<ol class="lista">
+										<li>Sebastian Vettel</li>
+										<li>Lewis Hamilton</li>
+										<li>Kimi Raikkonen</li>
+										<li>Daniel Ricciardo</li>
+										<li><strong>Fernando Alonso</strong></li>
+										<li>Max Verstappen</li>
+										<li>Nico Hülkenberg</li>
+										<li>Valtteri Bottas</li>
+										<li>Stoffel Vandoorne</li>
+										<li><strong>Carlos Sainz</strong></li>
+										<li>Sergio Pérez</li>
+										<li>Esteban Ocon</li>
+										<li>Lance Stroll</li>
+										<li>Sergey Sirotkin</li>
+										<li>Pierre Gasly</li>
+										<li>Brendon Hartley</li>
+										<li>Romain Grosjean</li>
+										<li>Kevin Magnussen</li>
+										<li>Marcus Ericsson</li>
+										<li>Charles Leclerc</li>
+									</ol>
 								</p>
 							</section>
 						</div>
 						<div class="3u">
 							<section id="sidebard2">
 								<header>
-									<h2>Sidebar 2</h2>
+									<h2>Equipos</h2>
 								</header>
 								<ul class="style1">
-									<li class="first"><span class="fa fa-check"></span><a href="#">Maecenas luctus lectus at sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam rhoncus volutpat erat</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Donec dictum metus in sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Integer gravida nibh quis urna</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam posuere augue sit amet nisl</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Nulla luctus eleifend purus</a></li>
+									<li class="first"><a href="#">Mercedes AMG Petronas Motorsport</a></li>
+									<li><a href="#">Scuderia Ferrari</a></li>
+									<li><a href="#">Aston Martin Red Bull Racing</a></li>
+									<li><a href="#">Sahara Force India F1 Team</a></li>
+									<li><a href="#">Williams Martini Racing</a></li>
+									<li><a href="#">Renault Sport Formula One Team</a></li>
+									<li><a href="#">Red Bull Toro Rosso Honda</a></li>
+									<li><a href="#">Haas F1 Team</a></li>
+									<li><a href="#">McLaren F1 Team</a></li>
+									<li><a href="#">Alfa Romeo Sauber F1 Team</a></li>
 								</ul>
-								<a href="#" class="button">Full Article</a>
 							</section>
 						</div>
 					</div>
 
 				</div>	
-			</div>
-
-
-			<!-- Footer -->
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="3u">
-							<section id="box1">
-								<header>
-									<h2>Nulla facilisi</h2>
-								</header>
-								<ul class="style3">
-									<li class="first">
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Vestibulum sem magna, elementum ut, vestibulum facilisis. Nulla facilisi. Cum sociis natoque penatibus.</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Pellentesque erat erat, tincidunt in, eleifend, malesuada bibendum. Suspendisse sit amet  in eros bibendum condimentum. </a> </p>
-									</li>
-								</ul>
-							</section>
-						</div>
-						<div class="6u">
-							<section id="box2">
-								<header>
-									<h2>Donec dictum metus</h2>
-								</header>
-								<div> <a href="#" class="image full"><img src="images/pics02.jpg" alt=""></a> </div>
-								<p>Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl.</p>
-							</section>
-						</div>
-						<div class="3u">
-							<section id="box3">
-								<header>
-									<h2>Gravida ipsum</h2>
-								</header>
-								<ul class="style1">
-									<li class="first"><a href="#">Pellentesque quis elit non lectus eleifend purus condimentum.</a></li>
-									<li><a href="#">Lorem ipsum dolort, consectetuer adipiscing dictum metus sapien.</a></li>
-									<li><a href="#">Phasellus nec dictum metus in sapien pellentesque congue.</a></li>
-									<li><a href="#">Cras vitae metus aliquam risus dictum metus in sapien pharetra.</a></li>
-									<li><a href="#">Duis non dictum metus in sapien ante in metus commodo euismod lobortis.</a></li>
-								</ul>
-							</section>
-						</div>
-					</div>
-				</div>
 			</div>
 
 			<!-- Copyright -->
