--- a/threecolumn.html
+++ b/threecolumn.html
@@ -39,7 +39,7 @@
 					<!-- Logo -->
 					<div id="logo">
 						<h1><a href="#">Formula 1</a></h1>
-						<span>Design by TEMPLATED</span>
+						<span>2018</span>
 					</div>
 					
 					<!-- Nav -->
@@ -259,16 +259,16 @@
 									<h2>Equipos</h2>
 								</header>
 								<ul class="style1">
-									<li class="first"><a href="#">Mercedes AMG Petronas Motorsport</a></li>
-									<li><a href="#">Scuderia Ferrari</a></li>
-									<li><a href="#">Aston Martin Red Bull Racing</a></li>
-									<li><a href="#">Sahara Force India F1 Team</a></li>
-									<li><a href="#">Williams Martini Racing</a></li>
-									<li><a href="#">Renault Sport Formula One Team</a></li>
-									<li><a href="#">Red Bull Toro Rosso Honda</a></li>
-									<li><a href="#">Haas F1 Team</a></li>
-									<li><a href="#">McLaren F1 Team</a></li>
-									<li><a href="#">Alfa Romeo Sauber F1 Team</a></li>
+									<li class="first"><a href="https://es.wikipedia.org/wiki/Mercedes-Benz_en_F%C3%B3rmula_1">Mercedes AMG Petronas Motorsport</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Scuderia_Ferrari">Scuderia Ferrari</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Red_Bull_Racing">Aston Martin Red Bull Racing</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Sahara_Force_India_F1_Team">Sahara Force India F1 Team</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Williams_Grand_Prix_Engineering">Williams Martini Racing</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Renault_en_F%C3%B3rmula_1">Renault Sport Formula One Team</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Scuderia_Toro_Rosso">Red Bull Toro Rosso Honda</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Haas_F1_Team">Haas F1 Team</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/McLaren_F1_Team">McLaren F1 Team</a></li>
+									<li><a href="https://es.wikipedia.org/wiki/Sauber_F1_Team">Alfa Romeo Sauber F1 Team</a></li>
 								</ul>
 							</section>
 						</div>
