Modificacion de ficheros

--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -113,7 +113,7 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<div class="container">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+					Github <a href="https://github.com/JesusArias1995/Proyecto_HTML5_CSS">github.com/JesusArias1995</a>
 				</div>
 			</div>
 			
