--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>F1</title>
+		<title>Breve historia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -190,7 +190,7 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<div class="container">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+					Github <a href="https://github.com/JesusArias1995/Proyecto_HTML5_CSS">github.com/JesusArias1995</a>
 				</div>
 			</div>
 			
