Modificacion de ficheros

--- a/threecolumn.html
+++ b/threecolumn.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Pilotos</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -8,7 +8,6 @@
 		<meta name="keywords" content="" />
 		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
@@ -62,93 +61,95 @@
 								</header>
 								<ul class="style3">
 									<li class="first">
-										<p class="date"><a href="#">Mar <b>25</b></a></p>
-										<p><a href="#">GP de Australia Circuito: Albert Park</a></p>
+										<p class="date">Mar <b>25</b></p>
+										<p><a href="twocolumn1.html">GP de Australia Circuito: Albert Park</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">Abr <b>08</b></a></p>
-										<p><a href="#">GP de Baréin Circuito: Internacional de Bareín</a></p>
+										<p class="date">Abr <b>08</b></p>
+										<p><a href="twocolumn1.html">GP de Baréin Circuito: Internacional de Bareín</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">Abr <b>15</b></a> </p>
-										<p><a href="#">GP de China Circuito: Internacional de Shanghái</a></p>
+										<p class="date">Abr <b>15</b></p>
+										<p><a href="twocolumn1.html">GP de China Circuito: Internacional de Shanghái</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">Abr <b>29</b></a> </p>
-										<p><a href="#">GP de Azerbaiyán Circuito: Callejero de Bakú</a></p>
+										<p class="date">Abr <b>29</b></p>
+										<p><a href="twocolumn1.html">GP de Azerbaiyán Circuito: Callejero de Bakú</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">May <b>13</b></a> </p>
-										<p><a href="#">GP de España Circuito: Barcelona-Cataluña</a></p>
+										<p class="date">May <b>13</b></p>
+										<p><a href="twocolumn1.html">GP de España Circuito: Barcelona-Cataluña</a></p>
 									</li>
 									<li>
-										<p class="date"><a href="#">May <b>27</b></a> </p>
-										<p><a href="#">GP de Mónaco Circuito: Mónaco</a></p>
+										<p class="date">May <b>27</b></p>
+										<p><a href="twocolumn1.html">GP de Mónaco Circuito: Mónaco</a></p>
 									</li>
-									<a href="#" onclick="mostrar(this); return false" />Ver más</a>
-									<div id="oculto" style="display:none">
-									<li>
-										<p class="date"><a href="#">Jun <b>10</b></a> </p>
-										<p><a href="#">GP de Canadá Circuito: Gilles Villeneuve</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Jun <b>24</b></a> </p>
-										<p><a href="#">GP de Francia Circuito: Paul Ricard</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Jul <b>01</b></a> </p>
-										<p><a href="#">GP de Austria Circuito: Red Bull Ring</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Jul <b>08</b></a> </p>
-										<p><a href="#">GP de Gran Bretaña Circuito: Silverstone</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Jul <b>22</b></a> </p>
-										<p><a href="#">GP de Alemania Circuito: Hockenheimring</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Jul <b>29</b></a> </p>
-										<p><a href="#">GP de Hungría Circuito: Hungaroring</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Ago <b>26</b></a> </p>
-										<p><a href="#">GP de Bélgica Circuito: Spa-Francorchamps</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Sept <b>02</b></a> </p>
-										<p><a href="#">GP de Italia Circuito: Autodromo Nazionale di Monza</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Sept <b>16</b></a> </p>
-										<p><a href="#">GP de Singapur Circuito: Callejero de Marina Bay</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Sept <b>30</b></a> </p>
-										<p><a href="#">GP de Rusia Circuito: Autódromo de Sochi</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Oct <b>07</b></a> </p>
-										<p><a href="#">GP de Japón Circuito: Suzuka</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Oct <b>21</b></a> </p>
-										<p><a href="#">GP de Estados Unidos Circuito: De las Américas</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Oct <b>28</b></a> </p>
-										<p><a href="#">GP de México Circuito: Autódromo Hermanos Rodríguez</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Nov <b>11</b></a> </p>
-										<p><a href="#">GP de Brasil Circuito: Autódromo José Carlos Pace</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">Nov <b>25</b></a> </p>
-										<p><a href="#">GP de Abu Dabi Circuito: Yas Marina</a></p>
-									</li>
-									</div>
 								</ul>
+								<a onclick="mostrar(this); return false">Ver más</a>
+								<div id="oculto" style="display:none">
+								<ul class=style3>
+									<li>
+										<p class="date">Jun <b>10</b></p>
+										<p><a href="twocolumn1.html">GP de Canadá Circuito: Gilles Villeneuve</a></p>
+									</li>
+									<li>
+										<p class="date">Jun <b>24</b></p>
+										<p><a href="twocolumn1.html">GP de Francia Circuito: Paul Ricard</a></p>
+									</li>
+									<li>
+										<p class="date">Jul <b>01</b></p>
+										<p><a href="twocolumn1.html">GP de Austria Circuito: Red Bull Ring</a></p>
+									</li>
+									<li>
+										<p class="date">Jul <b>08</b></p>
+										<p><a href="twocolumn1.html">GP de Gran Bretaña Circuito: Silverstone</a></p>
+									</li>
+									<li>
+										<p class="date">Jul <b>22</b></p>
+										<p><a href="twocolumn1.html">GP de Alemania Circuito: Hockenheimring</a></p>
+									</li>
+									<li>
+										<p class="date">Jul <b>29</b></p>
+										<p><a href="twocolumn1.html">GP de Hungría Circuito: Hungaroring</a></p>
+									</li>
+									<li>
+										<p class="date">Ago <b>26</b></p>
+										<p><a href="twocolumn1.html">GP de Bélgica Circuito: Spa-Francorchamps</a></p>
+									</li>
+									<li>
+										<p class="date">Sept <b>02</b></p>
+										<p><a href="twocolumn1.html">GP de Italia Circuito: Autodromo Nazionale di Monza</a></p>
+									</li>
+									<li>
+										<p class="date">Sept <b>16</b></p>
+										<p><a href="twocolumn1.html">GP de Singapur Circuito: Callejero de Marina Bay</a></p>
+									</li>
+									<li>
+										<p class="date">Sept <b>30</b> </p>
+										<p><a href="twocolumn1.html">GP de Rusia Circuito: Autódromo de Sochi</a></p>
+									</li>
+									<li>
+										<p class="date">Oct <b>07</b></p>
+										<p><a href="twocolumn1.html">GP de Japón Circuito: Suzuka</a></p>
+									</li>
+									<li>
+										<p class="date">Oct <b>21</b></p>
+										<p><a href="twocolumn1.html">GP de Estados Unidos Circuito: De las Américas</a></p>
+									</li>
+									<li>
+										<p class="date">Oct <b>28</b></p>
+										<p><a href="twocolumn1.html">GP de México Circuito: Autódromo Hermanos Rodríguez</a></p>
+									</li>
+									<li>
+										<p class="date">Nov <b>11</b> </p>
+										<p><a href="twocolumn1.html">GP de Brasil Circuito: Autódromo José Carlos Pace</a></p>
+									</li>
+									<li>
+										<p class="date">Nov <b>25</b></p>
+										<p><a href="twocolumn1.html">GP de Abu Dabi Circuito: Yas Marina</a></p>
+									</li>
+								</ul>
+								</div>
 							</section>
 						</div>
 						<div class="6u skel-cell-important">
@@ -156,7 +157,7 @@
 								<header>
 									<h2>Pilotos 2018</h2>
 								</header>
-								<p><table>
+								<table>
 									<caption>Alineación oficial de participantes en F1 2018</caption>
 									<thead>
 										<tr>
@@ -210,8 +211,8 @@
 											<td>Renault Sport Formula One Team</td>
 										</tr>
 										<tr>
-											<td>Carlos Sainz</td>
-											<td>Renault Sport Formula One Team</td>
+											<td><strong>Carlos Sainz</strong></td>
+											<td><strong>Renault Sport Formula One Team</strong></td>
 										</tr>
 										<tr>
 											<td>Pierre Gasly</td>
@@ -230,8 +231,8 @@
 											<td>Haas F1 Team</td>
 										</tr>
 										<tr>
-											<td>Fernando Alonso</td>
-											<td>McLaren F1 Team</td>
+											<td><strong>Fernando Alonso</strong></td>
+											<td><strong>McLaren F1 Team</strong></td>
 										</tr>
 										<tr>
 											<td>Stoffel Vandoorne</td>
@@ -246,7 +247,7 @@
 											<td>Alfa Romeo Sauber F1 Team</td>
 										</tr>
 									</tbody>
-								</table></p>
+								</table>
 							</section>
 						</div>
 						<div class="3u">
