--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Temporada actual</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -8,7 +8,6 @@
 		<meta name="keywords" content="" />
 		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
@@ -54,7 +53,6 @@
 									<h2>Temporada actual</h2>
 									<h3>Clasificacion Mundial 2018</h3>
 								</header>
-								<p>
 									<ol class="lista">
 										<li>Sebastian Vettel</li>
 										<li>Lewis Hamilton</li>
@@ -77,7 +75,6 @@
 										<li>Marcus Ericsson</li>
 										<li>Charles Leclerc</li>
 									</ol>
-								</p>
 							</section>
 						</div>
 						<div class="3u">
