--- a/onecolumn.html
+++ b/onecolumn.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Formulario</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -8,7 +8,6 @@
 		<meta name="keywords" content="" />
 		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
