--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 	<head>
 		<title>Grandes Premios</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -8,7 +8,6 @@
 		<meta name="keywords" content="" />
 		<link rel="shortcut icon" href="images/favicon.png" />
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
@@ -74,7 +73,7 @@
 								<header>
 									<h2>Grandes premios 2018</h2>
 								</header>
-								<p><table>
+								<table>
 									<caption>Grandes premios de la F1 2018</caption>
 									<thead>
 										<tr>
@@ -110,7 +109,7 @@
 											<td>306.153</td>
 										</tr>
 										<tr>
-											<td>Gran Premio de España</td>
+											<td><strong>Gran Premio de España</strong></td>
 											<td>66</td>
 											<td>4.655</td>
 											<td>307.230</td>
@@ -212,7 +211,7 @@
 											<td>305.470</td>
 										</tr>
 									</tbody>
-								</table></p>
+								</table>
 							</section>
 						</div>
 					</div>
