Modificacion de ficheros

--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -27,7 +27,7 @@
 					<!-- Logo -->
 					<div id="logo">
 						<h1><a href="#">Formula 1</a></h1>
-						<span>Design by TEMPLATED</span>
+						<span>2018</span>
 					</div>
 					
 					<!-- Nav -->
